Enhance Assign Role API